@@ -93,8 +93,7 @@ protected:
             const auto phase_vec = fHorizontalPhase
                     ? SkVector::Make(tile.width(), 0)
                     : SkVector::Make(0, tile.height());
-            const auto phase_shift = SkVector::Make(phase_vec.fX / layerShaderMatrix.getScaleX(),
-                                                    phase_vec.fY / layerShaderMatrix.getScaleY())
+            const auto phase_shift = SkVector::Make(phase_vec.fX, phase_vec.fY)
                                      * std::fmod(fPhase * (1/360.0f), 1);
             const auto phase_shader_matrix = SkMatrix::Translate(phase_shift.x(), phase_shift.y());
 
